--- a/about_site.html
+++ b/about_site.html
@@ -10,6 +10,6 @@
     <a href="https://danlokplay.github.io/Project_11class"  >Главная страница</a>  
     <a href="https://danlokplay.github.io/Project_11class/tests.html">Тесты</a>
     <a href="https://danlokplay.github.io/Project_11class/about_site.html">О сайте</a>
-    <h1>Вёрстка веб-страниц</h1>
+    <h1>О сайте</h1>
 </body>
 </html>
