--- a/tests.html
+++ b/tests.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Тесты</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <a href="https://danlokplay.github.io/Project_11class"  >Главная страница</a>  
     <a href="https://danlokplay.github.io/Project_11class/tests.html">Тесты</a>
     <a href="https://danlokplay.github.io/Project_11class/about_site.html">О сайте</a>
-    <h1>Вёрстка веб-страниц</h1>
+    <h1>Тесты по проекту</h1>
 </body>
 </html>
