--- a/about_site.html
+++ b/about_site.html
@@ -11,5 +11,6 @@
     <a href="https://danlokplay.github.io/Project_11class/tests.html">Тесты</a>
     <a href="https://danlokplay.github.io/Project_11class/about_site.html">О сайте</a>
     <h1>О сайте</h1>
+    <a href="Проект.docx" target="_blank">Скачать Проект.docx</a>
 </body>
 </html>
