--- a/tests.html
+++ b/tests.html
@@ -5,11 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тесты</title>
     <link rel="stylesheet" href="index.css">
+    <!-- Bootstrap reboot (для сброса стилей) -->
+	<link rel="stylesheet" href="libs/bootstrap-reboot.min.css">
+
+	<!-- Bootstrap сетка -->
+	<link rel="stylesheet" href="libs/bootstrap-grid.min.css">
+
+	<!-- Шрифты с Google Fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+	<!-- Стили сайта -->
+	<link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <a href="https://danlokplay.github.io/Project_11class"  >Главная страница</a>  
-    <a href="https://danlokplay.github.io/Project_11class/tests.html">Тесты</a>
-    <a href="https://danlokplay.github.io/Project_11class/about_site.html">О сайте</a>
-    <h1>Тесты по проекту</h1>
+<body class="body">
+    <nav class="navbar">
+        <div class="container">
+            <a href="https://danlokplay.github.io/Project_11class" class="navbar-brand">Вёрстка веб-страниц</a>
+            <div class="navbar-wrap">
+                <ul class="navbar-menu">
+                <li><a href="https://danlokplay.github.io/Project_11class">Главная страница</a></li>
+                <li><a href="https://danlokplay.github.io/Project_11class/tests.html">Тесты</a></li>
+                </ul>
+            <a class="about_site" href="https://danlokplay.github.io/Project_11class/about_site.html">О сайте</a>
+            </div>
+
+        </div>
+    </nav>
+
 </body>
 </html>
