--- a/tests.html
+++ b/tests.html
@@ -6,17 +6,15 @@
     <title>Тесты</title>
     <link rel="stylesheet" href="index.css">
     <!-- Bootstrap reboot (для сброса стилей) -->
-	<link rel="stylesheet" href="libs/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="https://danlokplay.github.io/Project_11class/libs/bootstrap-reboot.min.css">
 
 	<!-- Bootstrap сетка -->
-	<link rel="stylesheet" href="libs/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="https://danlokplay.github.io/Project_11class/libs/bootstrap-grid.min.css">
 
 	<!-- Шрифты с Google Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-	<!-- Стили сайта -->
-	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="body">
     <nav class="navbar">
